# Run3ModelGen

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pixi.toml  setup_pixi.sh  test.py
doc/: micromegas_build.md  softsusy_build.md  spheno_build.md  superiso_build.md
source/: .gitlab-ci.yml  CMakeLists.txt  cmake_build_env.sh  helloworld.cxx  setup.sh  superiso_v4.0.tgz
source/Run3ModelGen/: CMakeLists.txt
source/Run3ModelGen/data/: default_config.yaml  extractmodels_condor.sh  genmodels_condor.sh  logo.txt  raw.slha
source/Run3ModelGen/python/: addinputblocks.py  condor_handler.py  csvReader.py  extractor.py  microextract.py  modelgen.py  ntupling.py  pMSSM_convert.py  pyslha.py
source/Run3ModelGen/scripts/: extractModels.py  extractModels_condor.py  genModels.py  genModels_condor.py  pytest.py  subCondor.py
source/SPheno-4.0.5beta/: CMakeLists.txt  Makefile
source/SPheno-4.0.5beta/output/: SPheno.spc.AMSB  SPheno.spc.GMSB  SPheno.spc.SeesawI  SPheno.spc.SeesawII  SPheno.spc.SeesawIII  SPheno.spc.mNUHM  SPheno.spc.mSUGRA  SPheno.spc.mSUGRA_NUHM
source/SPheno-4.0.5beta/src/: Control.F90  InputOutput.F90  LoopMasses.F90  Makefile  SPheno4.f90
source/micromegas_5.2.1/: CMakeLists.txt
source/micromegas_5.2.1/CPVMSSM/: main.c
source/micromegas_5.2.1/CalcHEP_src/: getFlags
source/micromegas_5.2.1/CalcHEP_src/c_source/mix_events/: Makefile  event2pyth.c
source/micromegas_5.2.1/CalcHEP_src/c_source/num/: Makefile
source/micromegas_5.2.1/CalcHEP_src/c_source/symb/: Makefile  lbl.c  read_mdl.c  s_calchep.c
source/micromegas_5.2.1/CalcHEP_src/c_source/tab/: Makefile  lhe2tab.c
source/micromegas_5.2.1/CalcHEP_src/include/: nType.h  version.h
source/micromegas_5.2.1/CalcHEP_src/sbin/: ld_n
source/micromegas_5.2.1/IDM/: DEADJOE  dataImproveCS.par  main.c
source/micromegas_5.2.1/LHM/: main.c
source/micromegas_5.2.1/LLL_scalar/: main.c
source/micromegas_5.2.1/MSSM/: main.c
source/micromegas_5.2.1/NMSSM/: main.c
source/micromegas_5.2.1/SingletDM/: main.c
source/micromegas_5.2.1/Z3IDM/: main.c
source/micromegas_5.2.1/Z4IDSM/: main.c
source/micromegas_5.2.1/include/: SMODELS.inc  micromegas.h  micromegas_aux.h
source/micromegas_5.2.1/man/: manual.bib  manual_5.2.tex
source/micromegas_5.2.1/mdlIndep/: dd_exp.c  main.c
source/micromegas_5.2.1/sources/: 22_par.c  DDexclusion.c  Makefile  directDet.c  freezein.c  tools.c
source/micromegas_5.2.1/sources/maxGap/: CMaxinf.f  UpperLim.f  pathData.f
source/softsusy-4.1.11/: CMakeLists.txt  Makefile.am  Makefile.in  configure
source/softsusy-4.1.11/Config/: config.h.in
source/softsusy-4.1.11/autom4te.cache/: output.0  requests  traces.0  traces.1
